[tool.poetry]
name = "mytask"
version = "0.1.0"
description = ""
authors = ["DanYunin <daniilunin2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "lab_yunin"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
