[tool.poetry]
name = "unn-course-aasd-lab-python"
version = "0.1.0"
description = ""
authors = ["Dan Yunin <DaniilUnin2002@yandex.ru>"]
readme = "README.md"
packages = [{include = "lab_yunin"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
